# bevy_3rd_person_camera_and_control

./: Cargo.toml  README.md
src/: main.rs
src/third_person/: camera.rs  controller.rs  mod.rs
