[package]
name = "fighter-jet-3d-movements"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy-inspector-egui = "0.13.0"
bevy_polyline = "0.3"
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render" ] }
bevy_atmosphere = "0.4.1"
ang = "0.2.0"